--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 	"license": "",
 	"require": {
 		"laravel/framework": "4.2.*",
-		"laravel/cashier": "~2.0"
+		"laravel/cashier": "~2.0",
+		"artdarek/oauth-4-laravel": "dev-master"
 	},
 
 	"autoload": {
